--- a/src/KingthyMail.Solution/Kingthy.Mail/Kingthy.Mail.csproj
+++ b/src/KingthyMail.Solution/Kingthy.Mail/Kingthy.Mail.csproj
@@ -56,6 +56,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utility.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="doc\readme.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
