--- a/src/KingthyMail.Solution/Kingthy.Mail/Kingthy.Mail.csproj
+++ b/src/KingthyMail.Solution/Kingthy.Mail/Kingthy.Mail.csproj
@@ -57,7 +57,7 @@
     <Compile Include="Utility.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="doc\readme.txt" />
+    <Content Include="docs\readme.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
